<resources>
    <string name="app_name">iFresh</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy_terms">I have read and agree to the Privacy Policy and Terms &amp; Conditions.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="cart">Cart</string>
    <string name="your_code">Make Rerfer Code</string>
    <string name="payment_msg">Payment Message</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="image_full">Medicine Prescription</string>
    <string name="time_str">Time: %1$s</string>
    <string name="date_str">Date: %1$s</string>
    <string name="device_reg_msg">Your mobile no is register with more than one device so you would not get 100/- amount  </string>
    <string name="change_pass">Change Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="recover_pass">Continue</string>
    <string name="new_pass">New Password</string>
    <string name="msg_reset_pass_success">Your password reset successfully, please login with your password.</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="via">Via&#160;</string>
    <string name="cod">C.O.D.</string>
    <string name="faq">FAQ</string>
    <string name="work">Work</string>
    <string name="logout">LogOut</string>
    <string name="logout_cnf">Are you sure you want to logOut?</string>
    <string name="offer_alert">Get Free Delivery</string>
    <string name="shopbycategory">Shop by Category</string>
    <string name="search">Search</string>
    <string name="no_category_found">No Category Found</string>
    <string name="view_all">View All</string>
    <string name="login_">Login</string>
    <string name="password_">Password</string>
    <string name="verify">Verify</string>
    <string name="mail_send_msg">We will send you an OTP on this email to verify. </string>
    <string name="mobile_send_msg">We will send you an OTP on this mobile number to verify. </string>
    <string name="please_type_verification_code_sent_to">Please Enter OTP sent via SMS on </string>
    <string name="please_type_verification_code_sent">Please Enter OTP </string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered">Not Registered yet?</string>
    <string name="forgottext">Forgot password ?</string>
    <string name="forgot_message_hint">Enter mobile number</string>
    <string name="changepswtext">Change Password </string>
    <string name="old_pass">Old Password </string>
    <string name="reset_pass_text">Reset Your Password</string>
    <string name="plus_sign">+</string>
    <string name="changepsw">Change Password ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="update">Update</string>
    <string name="update_add">Update Address</string>
    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="ortext"><u>OR</u></string>
    <string name="profile">Profile</string>
    <string name="upload_medicine">Upload Medicine</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="address">Address</string>
    <string name="pincode">PinCode</string>
    <string name="code">91</string>
    <string name="pincoden">342001</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="is_login">Login ?</string>
    <string name="sign_up">SignUp</string>
    <string name="next">Next</string>
    <string name="otp">Verify Your Mobile Number</string>
    <string name="deliverytime">Delivery Time</string>
    <string name="select_delivery_date">Select delivery date</string>
    <string name="verify_your_email">Verify Your Email </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="more_variant">More Variants</string>
    <string name="fav_text">Save</string>
    <string name="share_text">Share</string>
    <string name="similarproduct">Similar Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="buynow">Go To Cart</string>
    <string name="relatedproducts">Related Products</string>
    <string name="view_more"><u>View More</u></string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="no_fav_found">No Favourites Found</string>
    <string name="limit_alert">apologies,max product quantity limit reached.</string>
    <string name="no_item_cart">Cart is Empty</string>
    <string name="delete_add">Are You Sure Want To Delete Address ? </string>
    <string name="deleteproductmsg">This Will Delete Cart Are You Sure Want To Delete Cart Product ? </string>
    <string name="deleteproducttitle">Remove Product</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="kg_limit">Oops! Limited stock available. </string>
    <string name="limit_exceed">apologies, Max Limit Reached. </string>
    <string name="total_amt">Subtotal</string>
    <string name="items">Items Amount :</string>
    <string name="promo_applied">PromoCode Discount :</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge1">Delivery Charge :</string>
    <string name="free">Free</string>
    <string name="cart_subtotal">Total</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="update_location">Update Your Location</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="promo_code_msg">Have a Promo Code?</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="selectcity">Please Select City</string>
    <string name="selectarea">Please Select Area</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="sort">Sortlist</string>
    <string name="filterby">Filter By</string>
    <string name="update_app">Update</string>
    <string name="payment_mathod">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="pay_u_pay">PayUMoney</string>
    <string name="paypal_pay">PayPal</string>
    <string name="razor_payment">RazorPay</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paypal">PayPal</string>
    <string name="resend">Resend</string>
    <string name="resend_cap">RE-SEND</string>
    <string name="not_receive_msg">Don\'t receive verify otp ?</string>
    <string name="verify_message">Verify your registered number and reset your password. </string>
    <string name="alert_register_num1">Mobile number is not registered on&#160;</string>
    <string name="alert_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="verify_alert_1">Mobile number already registered with&#160;</string>
    <string name="verify_alert_2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?</string>
    <string name="msg_forget_otp">OTP sent to this mobile number</string>
    <string name="verify_your_mobile">Verify Your Mobile </string>
    <string name="onlinepaytype">payumoney</string>
    <string name="codpaytype">cod</string>
    <string name="orderplaced">Order Placed</string>
    <string name="order_placed1">Order Placed!</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="prescription">Medicine order has been successfully placed!</string>
    <string name="summary">View Order Details</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total :&#160;</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="txn_cancel_msg">Are you sure you want to cancel the transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mobile_">Mobile:&#160;</string>
    <string name="qty_1">Qty:&#160;</string>
    <string name="more_variants">More Variants</string>
    <string name="update_alert">Update Alert</string>
    <string name="up_location">Update Location</string>
    <string name="submit">Submit</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="my_location">My Location</string>
    <string name="offer_price">Offer Price:&#160;</string>
    <string name="mrp">M.R.P:&#160;</string>
    <string name="you_save">You Save:&#160;</string>
    <string name="canceled_on">Order Cancelled On : &#160;</string>
    <string name="name_1">Name :&#160;</string>
    <string name="mobile_no_1">\nMobile No :&#160;</string>
    <string name="address_1">\nAddress :&#160;</string>
    <string name="total_">Total&#160;</string>
    <string name="_item_">&#160;Item&#160;</string>
    <string name="_items_">&#160;Items&#160;</string>
    <string name="total_balance">Total Balance:&#160;</string>
    <string name="noitem_intracker">You have not order yet</string>
    <string name="order_track">Track Order</string>
    <string name="rate">Rate Us</string>
    <string name="notifications">Notifications</string>
    <string name="walletbalance">Wallet Balance</string>
    <string name="sharapp">Share App</string>
    <string name="refere">Refer &amp; Earn</string>
    <string name="friend_code_list">Refer Friend</string>
    <string name="code_name">Coupon Code</string>
    <string name="new_rate_dialog_title">Rate us</string>
    <string name="new_rate_dialog_never">NO,THANKS</string>
    <string name="new_rate_dialog_later">LATER</string>
    <string name="new_rate_dialog_ok">RATE NOW</string>
    <string name="rate_dialog_message">If you enjoy this app, would you mind taking a moment to rate it ? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="conform_password">Conform Password</string>
    <string name="registration">Registration</string>
    <string name="default_address">Address List</string>
    <string name="already_login_please_click">Already Login Please Click</string>
</resources>