<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"

        />

    <item
        android:id="@+id/walletbalance"
        android:icon="@drawable/ic_wallet_bal"
        android:title="@string/walletbalance"

        />

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/menu_tracker"
            android:icon="@drawable/ic_tracking"
            android:title="@string/order_track" />




        <item
            android:id="@+id/menu_editprofile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />


        <item
            android:id="@+id/changePass"
            android:icon="@drawable/ic_pass"
            android:title="@string/change_pass"
            android:visible="false"/>



        <item
            android:id="@+id/friend_code_list"
            android:icon="@drawable/ic_refer_friend"
            android:title="@string/friend_code_list" />


        <item
            android:id="@+id/refer"
            android:icon="@drawable/ic_person_add"
            android:title="@string/refere" />

        <item
            android:id="@+id/promo_code"
            android:icon="@drawable/ic_promo"
            android:title="@string/code_name" />



    </group>


    <group
        android:id="@+id/group3"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact1"
            android:title="@string/contact" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate" />

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share"
            android:title="@string/sharapp" />

    </group>


    <group
        android:id="@+id/group4"
        android:checkableBehavior="single"
        android:visible="true">

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/menu_update"
            android:icon="@drawable/ic_baseline_system_update_24"
            android:title="Update App" />


    </group>




    <group
        android:id="@+id/group5"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_setdefultaddress"
            android:icon="@drawable/ic_defultloc"
            android:title="@string/default_address" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

        <item
            android:id="@+id/menu_changepass"
            android:icon="@drawable/ic_password"
            android:title="Change Password"
            android:visible="false"/>

        <item
            android:id="@+id/menu_forget"
            android:icon="@drawable/ic_password"
            android:title="Forget Password"
            android:visible="false"
            />



        <item
        android:id="@+id/menu_setaddresstyp"
        android:icon="@drawable/ic_setadd"
        android:title="Set Address"
        android:visible="false"/>




    </group>


</menu>