<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="30dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogo"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/card_shadow">


        <LinearLayout
            android:id="@+id/lytforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgottext"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/plus_sign"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edtFCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/code"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="number"
                    android:minWidth="50dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <EditText
                    android:id="@+id/edtforgotmobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/forgot_message_hint"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:text="9222222222"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <Button
                android:id="@+id/btnrecover"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/layout_rectangle"

                android:onClick="OnBtnClick"
                android:text="@string/recover_pass"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/verify_message"
                    android:textAllCaps="false"

                    android:textColor="@color/colorBlue" />

                <TextView
                    android:id="@+id/tvResendPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:onClick="OnBtnClick"
                    android:padding="7dp"
                    android:text="@string/resend"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>






    </LinearLayout>

</RelativeLayout>

