<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="30dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogo"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/card_shadow">


        <LinearLayout
            android:id="@+id/lytchangpsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/changepswtext"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/old_pass">

                <EditText
                    android:id="@+id/edtoldpsw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <EditText
                    android:id="@+id/edtnewpsw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/new_pass"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <EditText
                    android:id="@+id/edtcnfpsw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/conform_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnchangepsw"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dimen_7dp"
                android:layout_marginBottom="@dimen/dimen_7dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/layout_rectangle"

                android:onClick="OnBtnClick"
                android:text="@string/change_pass"
                android:textColor="@color/white" />

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>

